<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <com.cardiomood.android.controls.gauge.SpeedometerGauge
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="8dp"
        android:id="@+id/speedometer" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/distancetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/total_distance"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/speedtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/instantaneous_speed"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/timetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/total_time"
            android:textSize="17sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start"
                android:background="@color/secondaryDarkColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:paddingBottom="0dp"
                android:text="@string/start_calculating"
                style="@style/AppTheme"/>

            <Button
                android:id="@+id/pause"
                android:background="@color/secondaryDarkColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/pause"
                android:visibility="gone" />

            <Button
                android:id="@+id/stop"
                android:background="@color/secondaryDarkColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:text="@string/stop"
                android:visibility="gone" />
        </LinearLayout>

    </FrameLayout>

</LinearLayout>